# StaticCollections

./: .gitignore  CMakeLists.txt  test.cpp
Collections/: CircularQueue.h  LinkedList.h  List.h  Queue.h  StaticLinkedList.h  StaticVector.h  Vector.h
CollectionsTests/: CircularQueueTests.cpp  LinkedListTests.cpp  StaticLinkedListTests.cpp  StaticVectorTests.cpp  VectorTests.cpp
